--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
   <div id="imageDiv">
     <h2>띠부씰 도감 페이지 모음</h2>
     
-    <a class="pokedoc" href="https://moadocs.github.io/pokedoc/">
+    <a class="pokedoc" href="https://moo1234566.github.io/pokedoc/">
       <h3>포켓몬빵</h3>
       <h3>=> 바로 가기</h3>
     </a>
-    <a class="pokedoc1" href="https://moadocs.github.io/pokedoc/1st/">
+    <a class="pokedoc1" href="https://moo1234566.github.io/pokedoc/1st/">
       <h3>포켓몬1세대</h3>
       <h3>=> 바로 가기</h3>
     </a>
-    <a class="pokedoc2" href="https://moadocs.github.io/pokedoc/2nd/">
+    <a class="pokedoc2" href="https://moo1234566.github.io/pokedoc/2nd/">
       <h3>포켓몬2세대</h3>
       <h3>=> 바로 가기</h3>
     </a>
-    <a class="pokedocH" href="https://moadocs.github.io/pokedoc/halloween/">
+    <a class="pokedocH" href="https://moo1234566.github.io/pokedoc/halloween/">
       <h3>포켓몬할로윈</h3>
       <h3>=> 바로 가기</h3>
     </a>
