--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       .selected {background-color: rgba(0,0,0,0.7);}
       a > h3 { text-align: center; color:aqua ; background-color: rgba(0,0,0,0.5); opacity: 1;}
     </style>
-    <title>모음을 편하게 moadocs</title>
+    <title>커스텀해보는.................</title>
 </head>
 <body>
   <div class="title">모음을 편하게 Moadocs.</div>
