--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
       <h3>포켓몬빵</h3>
       <h3>=> 바로 가기</h3>
     </a>
-    <a class="pokedoc1" href="https://moo1234566.github.io/pokedoc/1st/">
+    <a class="pokedoc1" href="https://moo1234566.github.io/poketdoc/1st/">
       <h3>포켓몬1세대</h3>
       <h3>=> 바로 가기</h3>
     </a>
-    <a class="pokedoc2" href="https://moo1234566.github.io/pokedoc/2nd/">
+    <a class="pokedoc2" href="https://moo1234566.github.io/poketdoc/2nd/">
       <h3>포켓몬2세대</h3>
       <h3>=> 바로 가기</h3>
     </a>
-    <a class="pokedocH" href="https://moo1234566.github.io/pokedoc/halloween/">
+    <a class="pokedocH" href="https://moo1234566.github.io/poketdoc/halloween/">
       <h3>포켓몬할로윈</h3>
       <h3>=> 바로 가기</h3>
     </a>
