--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div id="imageDiv">
     <h2>띠부씰 도감 페이지 모음</h2>
     
-    <a class="pokedoc" href="https://moo1234566.github.io/pokedoc/">
+    <a class="pokedoc" href="https://moo1234566.github.io/poketdoc/">
       <h3>포켓몬빵</h3>
       <h3>=> 바로 가기</h3>
     </a>
